# stipulate.rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
src/conf/: java.rs  mod.rs  python.rs
src/output/: cli.rs  csv.rs  mod.rs  table.rs
src/test/: mod.rs  process.rs
test-data/: java-test-1.toml
test-data/java-test-1/students/all_right/: Main.java
test-data/java-test-1/students/all_wrong/: Main.java
test-data/java-test-1/students/compile_fail/: Main.java
test-data/java-test-1/students/timeout/: Main.java
