[package]
name = "stipulate"
version = "0.0.0"
authors = ["JarredAllen <jarredallen73@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A code stipulator for assessing student code in a learning environment"
repository = "https://github.com/JarredAllen/stipulate.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wait-timeout = "0.2.0"
toml = "0.5"
