[package]
name = "stipulate"
version = "0.0.3"
authors = ["JarredAllen <jarredallen73@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A code stipulator for assessing student code in a learning environment"
repository = "https://github.com/JarredAllen/stipulate.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
errormake = "0.2.1"
glob = "0.3.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.7"
toml = "0.5"
wait-timeout = "0.2.0"

# Optional dependencies depending on features
prettytable-rs = { version = "0.8.0", optional = true }

[features]
default = ["table-output"]
table-output = ["prettytable-rs"]

[profile.dev.package."*"]
opt-level = 2
